--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "axios": "^1.12.2",
     "dotenv": "^17.2.2",
     "framer-motion": "^12.23.12",
     "mongoose": "^8.18.1",
