--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "chola",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
-    "start": "next start",
-    "lint": "eslint"
-  },
+ "scripts": {
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start",
+  "export": "next export",
+  "build:static": "next build && next export"
+}
+, 
   "dependencies": {
     "@aws-sdk/client-s3": "^3.888.0",
     "@emotion/react": "^11.14.0",
