--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.12.2",
     "dotenv": "^17.2.2",
     "framer-motion": "^12.23.12",
+    "lucide-react": "^0.552.0",
     "mongoose": "^8.18.1",
     "next": "^15.5.3",
     "react": "^19.1.0",
